--- a/src/data/data/projects.json
+++ b/src/data/data/projects.json
@@ -13,7 +13,7 @@
     "logo": "TastyCloudLogo",
     "link": {
       "label": "Uben",
-      "href": "https://ubens.vercel.app/"
+      "href": "https://www.uben.online/"
     }
   },
   {
