--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/og": "^0.8.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -22,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-masonry-css": "^1.0.16",
+    "react-router-dom": "^7.13.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.8.0"
